	PR c++/71515 - typename in partial specialization

* pt.c (resolve_typename_type): Try to avoid calling
	currently_open_class.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@238696 138bc75d-0d04-0410-961f-82ee72b054a4